# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//chromecast/chromecast.gni")

# GYP target: chromecast/media.gyp:media_cdm
source_set("cdm") {
  sources = [
    "cast_cdm.cc",
    "cast_cdm.h",
    "cast_cdm_context.cc",
    "cast_cdm_context.h",
    "cast_cdm_proxy.cc",
    "cast_cdm_proxy.h",
  ]

  configs += [ "//media/mojo/services:mojo_media_config" ]

  deps = [
    "//base",
    "//chromecast/media/base",
    "//media",
  ]
}
