# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("renderer") {
  if (is_android) {
    sources += [
      "android_key_systems.cc",
      "android_key_systems.h",
    ]
  }

  deps = [
    "//base",
    "//components/cdm/common",
    "//content/public/renderer",
    "//media",
  ]
}
